--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -6,6 +6,7 @@
       - discovery.type=single-node
       - OPENSEARCH_JAVA_OPTS=-Xms1g -Xmx1g
       - plugins.security.disabled=true
+      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=ChangeMe_123456!   # 随便给个强密码
     ulimits:
       memlock:
         soft: -1
@@ -14,6 +15,43 @@
       - "9200:9200"
     volumes:
       - opensearch-data:/usr/share/opensearch/data
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s http://localhost:9200 >/dev/null || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 30
+
+  dashboards:
+    image: opensearchproject/opensearch-dashboards:2
+    container_name: kb-dashboards
+    environment:
+      - OPENSEARCH_HOSTS=["http://opensearch:9200"]
+      - DISABLE_SECURITY_DASHBOARDS_PLUGIN=true
+    ports:
+      - "5601:5601"
+    depends_on:
+      opensearch:
+        condition: service_healthy
+
+  kb-api:
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: kb-api
+    environment:
+      - OPENSEARCH_URL=http://opensearch:9200
+      - OPENSEARCH_INDEX=kb_demo_chunks
+      - CHUNK_SIZE=800
+      - CHUNK_OVERLAP=120
+      - DATA_DIR=/data
+    volumes:
+      - kb-data:/data
+    ports:
+      - "8080:8080"
+    depends_on:
+      opensearch:
+        condition: service_healthy
 
 volumes:
   opensearch-data:
+  kb-data:
